<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ed_creditnum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/blue"
            android:hint="@string/credit_number" />

        <EditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/blue"
            android:hint="@string/credit_owner" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ed_expiredate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:layout_marginLeft="20dp"
                android:paddingRight="20dp"
                android:backgroundTint="@color/blue"
                android:hint="CVV" />

            <View
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="36dp"
                android:layout_weight="0"
                android:background="@color/blue" />

            <EditText
                android:id="@+id/ed_cvv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:inputType="datetime"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/blue"
                android:hint="@string/expire_date" />

        </LinearLayout>

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:text="@string/done_loc" />

    </LinearLayout>
</LinearLayout>