<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorTransparent"
        android:gravity="center"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_bg_white"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:background="#EBEFF2"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/order_non_taxi_are_you_sure"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/dialog_unit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:text=""
                android:textColor="@color/black"
                android:layout_marginBottom="6dp"
                android:textSize="16sp" />


        <GridView
                android:id="@+id/gridview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnWidth="50dp"
                android:gravity="center"
                android:numColumns="5"
                android:stretchMode="spacingWidthUniform"
                android:verticalSpacing="16dp" />

        <TextView
                android:id="@+id/dialog_unit_price_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:text="@string/cost_price"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                android:textSize="12sp" />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="34dp"
                    android:paddingHorizontal="25dp"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal"
                    android:background="@drawable/rounded_bg_gray_1">

                <TextView
                        android:id="@+id/text_dialog_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="14"
                        android:textColor="@color/green"
                        android:textStyle="bold"
                        android:layout_marginHorizontal="4dp"
                        android:textSize="20sp" />
                <TextView
                        android:id="@+id/text_dialog_price_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jod"
                        android:textColor="#ff000000"
                        android:textStyle="bold"
                        android:textSize="20sp" />

            </LinearLayout>
        </RelativeLayout>

        <TextView
                android:id="@+id/dialog_unit_to_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:text="@string/to"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                android:textSize="12sp" />

        <TextView
                android:id="@+id/dialog_unit_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:textColor="@color/blue"
                android:textSize="12sp" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">


            <Button
                    android:id="@+id/button_yes"
                    style="@style/MainTheme.ButtonStyleLogin"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corner_green"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/yes" />

            <Button
                    android:id="@+id/button_no"
                    style="@style/MainTheme.ButtonStyleLogin"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corners_blue"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/no" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>